# url-shorter

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
url_shorter/: forms.py  mixins.py  models.py  settings.py  urls.py  views.py
url_shorter/migrations/: 0001_initial.py
url_shorter/templates/: base.html  create_link.html  index.html  index_old.html  links_delete.html  login.html  test.html  users_links.html  users_register.html
