[tool.poetry]
name = "url_shorter"
version = "0.1.0"
description = ""
authors = ["AlexanderIzmailov <a.a.izmailov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
django-bootstrap4 = "^22.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
